// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when <Comp /> renders should render some markup and a component 1`] = `
"<div style={{...}} onClick={[Function]}>
  <h1>
    You haven&#39;t clicked yet...
  </h1>
  <TestComp />
</div>"
`;

exports[`when <Comp /> renders should render something different on click 1`] = `
"<div style={{...}} onClick={[Function]}>
  <h1>
    Clickity click click yo!
  </h1>
</div>"
`;
